syntax = "proto3";

package proto;
option go_package = '../proto';
option cc_generic_services = true;

service DataNode {
  rpc Put (AddRequest) returns (AddResponse) {}
  rpc Get (GetRequest) returns (GetResponse) {}
  rpc Delete (DeleteRequest) returns (DeleteResponse) {}
  rpc Size (SizeRequest) returns (SizeResponse) {}
}

message AddRequest {
  string key = 1;
  bytes dataBlock = 2;
}

message AddResponse {
  string message = 1;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  bytes dataBlock = 1;
}

message DeleteRequest {
  string key = 1;
}

message DeleteResponse {
  string message = 1;
}

message SizeRequest {
  string key = 1;
}

message SizeResponse {
  int64 size = 1;
}